--- a/grid1.html
+++ b/grid1.html
@@ -8,14 +8,19 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body>
-    <div class="grid container-fluid bg-lime-200 h-screen gap-3">
-        <section class="bg-fuchsia-400"></section>
-        <section class="bg-orange-400"></section>
-        <section class="bg-purple-400"></section>
-        <section class="bg-rose-400"></section>
-        <section class="bg-blue-400"></section>
-        <section class="bg-slate-400"></section>
-        <section class="bg-zinc-400"></section>
+    <div class="grid container-fluid bg-lime-200 h-screen  gap-3 grid-cols-[.5fr_2.5fr_1fr_1.5fr] grid-rows-[1fr_1.3fr_.2fr_.7fr]">
+        <section class=" col-span-1 row-start-1 row-end-3 grid gap-2">
+            <main class="rounded-full bg-fuchsia-400"></main>
+            <main class="rounded-full bg-slate-400"></main>
+            <main class="rounded-full bg-orange-400"></main>
+            <main class="rounded-full bg-rose-400"></main>
+        </section>
+        <section class="bg-orange-400 col-start-2 col-end-4"></section>
+        <section class="bg-purple-400 col-start-4 row-start-1 row-end-4"></section>
+        <section class="bg-rose-400 row-start-2"></section>
+        <section class="bg-blue-400 row-start-2 row-end-4"></section>
+        <section class="bg-slate-400 col-start-1 col-end-3 row-start-3 row-end-5"></section>
+        <section class="bg-zinc-400 col-start-3 col-end-5"></section>
     </div>
 </body>
 </html>
